Duplicate the duplicate entry (this is a fun thing!!)

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -64,6 +64,14 @@ The "Allow sending duplicate messages" setting now works again.
   prs="6417"
 />
 
+The "Allow sending duplicate messages" setting now works again.
+
+<Credit
+  author="brian6932"
+  helper="tetyys, Nerixyz, pajlada, jupjohn, Mm2PL"
+  prs="6417"
+/>
+
 </div>
 
 ### Chat input {#2.5.4-chat-input}
